# boilerplate-fastapi

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: __main__.py  conftest.py  settings.py
app/api/: application.py
app/api/routes/: router.py
app/api/routes/v1/auth/: __init__.py  dtos.py  views.py
app/api/routes/v1/monitoring/: __init__.py  views.py
app/api/routes/v1/users/: __init__.py  dtos.py  views.py
app/clients/: aws_s3.py
app/domains/: database.py
app/domains/models/: base_model.py  user_model.py
app/middlewares/auth/: deps.py  security.py
app/repositories/: user_repository.py
app/services/: user_service.py
app/tests/: conftest.py  test_monitoring.py  test_user.py
app/tests/unity_tests/: __init__.py  test_auth.py  test_users.py
dockerfiles/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
migrations/models/: 0_init.py  1_20241121053928_update.py
